# hearth

./: .gitignore  CLAUDE.md  DESIGN.md
godot/: icon.svg.import  project.godot  rust.gdextension
godot/assets/Cats/: black cat with text.png.import  cat 1 (64х64).aseprite  cat 1 (64х64).png.import  cat 2 (64х64).aseprite  cat 2 (64х64).png.import  cat 3 (64х64).aseprite  cat 3 (64х64).png.import  ginger cat with text.png.import  white cat with text.png.import
godot/scenes/: creature.tscn  main.tscn
godot/scenes/creatures/: black_cat.tscn  ginger_cat.tscn  white_cat.tscn
godot/scripts/: creature.gd  creature.gd.uid  main.gd  main.gd.uid
rust/: Cargo.toml
rust/src/: bridge.rs  lib.rs
rust/src/game/: creature.rs  grid_pos.rs  mod.rs  node.rs  pathfinding.rs  terrain_type.rs  tile.rs  tile_content.rs  timer.rs  vec2.rs  world.rs  world_generation.rs
