[package]
name = "hearth"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.10"
godot = { git = "https://github.com/godot-rust/gdext.git", features = ["register-docs"]}
noise = "0.9.0"
# For Wasm, feature "experimental-wasm" can be added, but this is already done in build-wasm.sh script.

